# mcp-config-converter

./: .env.example  .gitignore  =1.59.7  AGENTS.md  Justfile  README.md  pyproject.toml  ruff.toml  ty.toml
.beads/: config.yaml  issues.jsonl
.claude/skills/development/python_imports/: SKILL.md
.claude/skills/development/python_naming/: SKILL.md
.claude/skills/development/python_pathlib/: SKILL.md
.claude/skills/development/python_refactoring/: SKILL.md
.claude/skills/development/python_uv_cli/: SKILL.md
.claude/skills/development/uv_mcp/: SKILL.md
.claude/skills/tool_usage/chunkhound/: SKILL.md
.claude/skills/tool_usage/issue_tracking/: SKILL.md
.claude/skills/tool_usage/knowledge_management/: SKILL.md
.claude/skills/tool_usage/mcp_servers/: SKILL.md
.claude/skills/tool_usage/problem_solving/: SKILL.md
.claude/skills/tool_usage/serena/: SKILL.md
.mcpcute/: config.json
.opencode/elf/: memory.db
.serena/: project.yml
docs/agents-md/: 000_General_Instructions.md  100_Tool_Usage.md  110_Tool_beads.md  120_Tool_memorygraph.md  130_Tool_sequential_thinking.md  600_Development.md  600_Python_Development.md  700_Development_Testing.md  CONSOLIDATION_CHECKLIST.md
mcp_config_converter/: __init__.py  __main__.py  cli.py  cli_helpers.py  models.py  transformers.py  types.py  utils.py
mcp_config_converter/cli/: __init__.py  arguments.py  constants.py  convert.py  init.py  llm_check.py  main.py  registry.py  show_defaults.py  utils.py  validate.py  ver.py
mcp_config_converter/formatters/: __init__.py  base.py  claude.py  gemini.py  opencode.py  vscode.py
mcp_config_converter/llm/: __init__.py  base.py  claude.py  client.py  deepseek.py  gemini.py  litellm_provider.py  mistral.py  ollama.py  openai.py  openrouter.py  perplexity.py  registry.py  sambanova.py  zai.py
mcp_config_converter/parsers/: __init__.py  base.py  json_parser.py  toml_parser.py  yaml_parser.py
mcp_config_converter/prompts/: __init__.py  base.py  conversion.py
mcp_config_converter/prompts/templates/: prompt.md  system.md
mcp_config_converter/prompts/templates/conversion/: rules.md
mcp_config_converter/prompts/templates/examples/: conversions.md
mcp_config_converter/prompts/templates/input/: section.md
mcp_config_converter/prompts/templates/output/: format.md  instructions.md
mcp_config_converter/prompts/templates/provider/: specifications.md
mcp_config_converter/prompts/templates/system/: instruction.md
mcp_config_converter/prompts/templates/validation/: instructions.md
mcp_config_converter/specs/: claude.md  codex.md  crush.md  gemini.md  mistral.md  opencode.md  vscode.md
scripts/: remove_version.py
tests/: __init__.py  test_cli.py  test_cli_helpers.py  test_console_output.py  test_formatters.py  test_ison_integration.py  test_litellm_provider.py  test_llm_client.py  test_llm_providers.py  test_parsers.py  test_provider_specs.py  test_unstructured_input.py  test_utils_config_format.py  test_utils_convert.py
tests/data/: config.json  config_prose.txt  config_pseudo.txt  input.json
