[project]
name = "mcp-config-converter"
version = "0.1.0"
description = "A configuration converter for MCP (Model Context Protocol) with enhanced CLI experience"
authors = [{name = "jr2804"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "openai>=2.11.0",
]

[build-system]
requires = ["hatchling", "uv-build"]
build-backend = "hatchling.build"

[project.scripts]
mcp-config-converter = "mcp_config_converter.cli.main:app"

[tool.isort]
profile = "black"
line_length = 160

[tool.uv]
package = true

[tool.undersort]
# Method visibility ordering: public (no underscore), protected (single underscore), private (double underscore)
# Customize the order by specifying: "public", "protected", "private"
order = ["public", "protected", "private"]

# Method type ordering within each visibility level (optional)
# Options: "class" (classmethod), "static" (staticmethod), "instance" (regular methods)
# Default order if not specified: ["instance", "class", "static"]
method_type_order = ["instance", "class", "static"]

# Exclude files/directories matching these patterns (optional)
# Patterns support glob syntax (e.g., "tests/*", "migrations/*.py", "**/generated/*")
# exclude = ["tests/*", "migrations/*.py"]


[dependency-groups]
dev = [
    "pytest>=7.0",
	"isort",
    "ruff",
    "ty",
    "undersort",
    "deptry",
    "codespell",
    "codespell>=2.4.1",
    "memorygraphmcp[ladybugdb]>=0.11.12",
    "rust-just>=1.45.0",
]

# Optional dependencies for LLM providers
[project.optional-dependencies]
anthropic = [
    "anthropic",
]
sambanova = [
    "sambanova",
]
perplexity = [
    "perplexityai",
]
openrouter = [
    "openrouter",
]
ollama = [
    "ollama",
]
gemini = [
    "google-generativeai>=0.8.0",
]
mistral = [
    "mistralai",
]
all = [
    "anthropic",
    "sambanova",
    "perplexityai",
    "openrouter",
    "ollama",
    "google-generativeai>=0.8.0",
    "mistralai",
]
