[project]
name = "mcp-config-converter"
dynamic = ["version"]
description = "A configuration converter for MCP (Model Context Protocol) with enhanced CLI experience"
authors = [{name = "jr2804"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "openai>=2.11.0",
    "litellm[caching]>=1.59.7",
    "toon-format",
    "orjson>=3.11.5",
    "mistune>=3.1.4",
    "remarshal>=1.2.0",
    "python-dotenv>=1.2.1",
    "google-genai>=1.56.0",
    "ison-py>=1.0.2",
    "isonantic>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-dotenv>=0.5.2",
    "isort",
    "ruff",
    "ty",
    "undersort",
    "deptry",
    "codespell",
    "codespell>=2.4.1",
    "memorygraphmcp[ladybugdb]>=0.11.12",
    "rust-just>=1.45.0",
    "mdformat>=1.0.0",
    "beads-mcp>=0.43.0",

]

# ---- Formatting/Linter/Type-Checking ----
# Do not configure tools directly here!
# See separate configuration files for tool-specific settings:
#   ruff.toml  - Ruff linter/formatter
#   ty.toml    - Ty type checker


# ---- Scripts ----

[project.scripts]
mcp-config-converter = "mcp_config_converter.cli:app"

# ---- Build system ----

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

# ---- Testing ----

[tool.pytest.ini_options]
env_files = [
    ".env",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"


[tool.hatch.build.hooks.version]
path = "mcp_config_converter/_version.py"
template = '''
version: str = "{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["mcp_config_converter"]


[tool.uv-dynamic-versioning]
vcs = "git"
commit-length = 6
#style = "pep440"
style = "semver"
bump = true

[tool.uv-dynamic-versioning.substitution]
# do not write back new version number to version file
files = []

# ---- Linter/formatter tools configurations ----
[tool.isort]
profile = "black"
line_length = 160

[tool.uv]
package = true


[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

[tool.undersort]
# Method visibility ordering: public (no underscore), protected (single underscore), private (double underscore)
# Customize the order by specifying: "public", "protected", "private"
order = ["public", "protected", "private"]

# Method type ordering within each visibility level (optional)
# Options: "class" (classmethod), "static" (staticmethod), "instance" (regular methods)
# Default order if not specified: ["instance", "class", "static"]
method_type_order = ["instance", "class", "static"]

# Exclude files/directories matching these patterns (optional)
# Patterns support glob syntax (e.g., "tests/*", "migrations/*.py", "**/generated/*")
# exclude = ["tests/*", "migrations/*.py"]
